# grapa

./: 404.html  BUILD_README.md  CMakeLists.txt  MANIFEST.in  README.md  TEST_ORGANIZATION_SUMMARY.md  build.py  build.sh  buildgrapalib.grz  buildlib.grc  client.crt  client.key  copylibs.txt  grapapy_test.ipynb  index.html  pyproject.toml  run_grapa_unicode_tests_mac.sh  run_mac_arm64_tests.sh  run_mac_tests.sh  run_simple_mac_test.sh  server.crt  server.key  setup - Copy.py  setup-linuxonly.py  setup.py  test_ascii_regression.cpp  test_binary_grep.cpp  test_col_db  test_current_capabilities.grc  test_db  test_emoji_debug.cpp  test_emoji_performance.cpp  test_enum_fix.cpp  test_fast_path.cpp  test_grapa_unicode_normalization.grc  test_grep_comparison.cpp  test_grep_fast_path.cpp  test_grep_regression.cpp  test_json_compatibility.grc  test_pcre_unicode.cpp  (+23 more)
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  grapapy_test-checkpoint.ipynb
API_REFERENCE/: index.html
GETTING_STARTED/: index.html
GREP/: index.html
PYTHON_USE_CASES/: index.html
TROUBLESHOOTING/: index.html
database/column_store/: index.html
database/quick_reference/: index.html
database/troubleshooting/: index.html
directory_navigation/: index.html
docs/: BASELIBS.md  BASETYPES  BASETYPES.md  BINARY.md  BINARY_GREP.md  BUILD.md  CREATELIB  CREATELIB.md  DEPENDENCIES.md  EXAMPLES.md  FUNCTION_QUICK_REFERENCE.md  GETTING_STARTED.md  GRAPAPY_INTEGRATION.md  GRAPAPY_NAMESPACE_SOLUTION.md  GREP.md  IMPLEMENTATION_PROGRESS.md  INCLUDE_SYSTEM.md  OPERATORS.md  PRODUCTION_READINESS_ASSESSMENT.md  PYTHON.md  PYTHON_USE_CASES.md  RUN.md  SETUPAWSDOCKER.md  SYNTAX.md  SYSLIBS.md  SYSTEM_FUNCTIONS.md  SYSTYPES.md  TESTING.md  TIME.md  TROUBLESHOOTING.md  UNICODE_GREP_STATUS.md  USE_CASES.md  directory_navigation.md  mkdocs-maintainers.yml  mkdocs.yml  python_integration.md  sitemap.xml  unified_path_system.md
docs-old/: BASELIBS.md  BUILD.md  DEPENDENCIES.md  GRZ_FORMAT.md  PRODUCTION_READINESS_ASSESSMENT.md  PYTHON.md  PYTHON_TO_GRAPA_MIGRATION.md  RUN.md  SYSTEM_FUNCTIONS.md  SYSTYPES.md  grc_scripts.md  internal.md
docs-old/database/: troubleshooting.md
docs-old/grep/: BINARY_GREP.md
docs-old/internal/: README.md  xml_bnf_analysis.md
docs-old/operators/: assignment.md
docs-old/syntax/: operator.md
docs-old/sys/: thread.md
docs-old/type/: ARRAY.md  OP.md  STR.md  SYSID.md  TABLE.md  TIME.md  VECTOR.md  XML.md
docs-site/: mkdocs.yml
docs-site/docs/: API_REFERENCE.md  BASELIBS.md  CLI_QUICKSTART.md  EXAMPLES.md  EXECUTION_TREES.md  FUNCTION_QUICK_REFERENCE.md  GETTING_STARTED.md  GO_TO_GRAPA_MIGRATION.md  GREP.md  GRZ_FORMAT.md  IMPLEMENTATION_PROGRESS.md  JS_TO_GRAPA_MIGRATION.md  KOTLIN_TO_GRAPA_MIGRATION.md  PYTHON_TO_GRAPA_MIGRATION.md  PYTHON_USE_CASES.md  RIPGREP_PARITY_RESULTS.md  RUBY_TO_GRAPA_MIGRATION.md  RUN.md  RUST_TO_GRAPA_MIGRATION.md  SWIFT_TO_GRAPA_MIGRATION.md  TESTING.md  TROUBLESHOOTING.md  TYPESCRIPT_TO_GRAPA_MIGRATION.md  UNICODE_GREP_STATUS.md  USE_CASES.md  cryptographic_features.md  directory_navigation.md  index.md  python_integration.md
docs-site/site/: 404.html  index.html
docs/API_REFERENCE/: index.html
docs/CLI_QUICKSTART/: index.html
docs/EXAMPLES/: index.html
docs/FUNCTION_QUICK_REFERENCE/: index.html
docs/GETTING_STARTED/: index.html
docs/GRAPAPY_NAMESPACE_SOLUTION/: index.html
docs/GRZ_FORMAT/: index.html
docs/RUN/: index.html
docs/TESTING/: index.html
docs/TROUBLESHOOTING/: index.html
docs/USE_CASES/: index.html
docs/database/: quick_reference.md
docs/docs/: CLI_QUICKSTART.md  EXAMPLES.md  GETTING_STARTED.md  GREP.md  PYTHON_USE_CASES.md  RUN.md  TESTING.md  TROUBLESHOOTING.md  directory_navigation.md  index.md  python_integration.md  (+1 more)
examples/: index.html
grapapy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
grc_scripts/: index.html
keys/: server.crt
lib/: libfltk.so.1.4.0  libfltk_forms.so.1.4  libfltk_images.so.1.4
mac_arm64_results/: compare_with_windows.sh  cpp_test_emoji_debug_results.txt  cpp_test_emoji_performance_results.txt  cpp_test_fast_path_results.txt  cpp_test_grep_fast_path_results.txt  cpp_test_simple_emoji_results.txt  cpp_test_simple_mac_results.txt  cpp_test_unicode_binary_mode_results.txt  cpp_test_unicode_debug_results.txt  cpp_test_unicode_fixed_results.txt  cpp_test_unicode_grep_fixed_results.txt  cpp_test_unicode_grep_validation_results.txt  cpp_test_unicode_hex_escape_results.txt  cpp_test_unicode_length_debug_results.txt  cpp_test_unicode_optimization_results.txt  cpp_test_unicode_performance_debug_results.txt  cpp_test_utf8proc_performance_results.txt  grapa_test_grapa_unicode_normalization_results.txt  grapa_unicode_grep_comprehensive_tests_results.txt  run_specific_test.sh  test_program  test_summary.txt
maintainers/: README.md  index.md
python_integration/: index.html
source/: Keccakreadableandcompact.c  buildcopylinuxlibs.grc  buildgrapalib.grc  fl_config.h  main.cpp  mainlib.cpp  mainpy.cpp  pymain.cpp  stdafx.cpp  stdafx.h
test/: README.md  TEST_CREATION_PLAN.md  TEST_ORGANIZATION_SUMMARY.md  TEST_STRATEGY.md  color_test.grc  current_status_verification.grc  debug_multiline_delimiter.grc  debug_test.grc  individual_test_runner.grc  investigation_test.grc  minimal_test_runner.grc  raw_table_test.grc  run_tests.grc  simple_file_test.grc  simple_file_verification.grc  simple_use_cases_test.grc  simple_zero_length_test.grc  table_types_comparison.grc  test_advanced_context.grc  test_atomic_groups.grc  test_basic_debug.grc  test_basic_option_combinations.grc  test_basic_pcre2.grc  test_binary_mode.grc  test_case_insensitive_unicode.grc  test_col_persistent_debug.grc  test_col_simple_clean.grc  test_col_simple_debug.grc  test_col_vs_row_set.grc  test_context_lines.grc  test_context_merging.grc  test_context_merging_simple.grc  test_context_separator_corner_cases.grc  test_context_separators.grc  test_current_capabilities.grc  test_current_status.grc  test_custom_delimiters.grc  test_debug_context.grc  test_debug_failing.grc  test_debug_invert.grc  (+59 more)
unified_path_system/: index.html
(+1210 files in other folders)
